[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-plugin-ltspice"
version = "0.1.0"
description = "LTspice driver for sim — thin adapter over ``sim_ltspice``."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Weiqi Ji", email = "jiweiqi10@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "sim-runtime @ git+https://github.com/svd-ai-lab/sim-cli@88d82ee",
    # The driver is a thin adapter over `sim_ltspice` (separately
    # published on PyPI). All file-format / layout / search-path logic
    # lives in that library; this plugin owns only the sim-cli driver
    # adapter.
    "sim-ltspice>=0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "build>=1.0",
]

[project.entry-points."sim.drivers"]
ltspice = "sim_plugin_ltspice:LTspiceDriver"

[project.entry-points."sim.skills"]
ltspice = "sim_plugin_ltspice:skills_dir"

[project.entry-points."sim.plugins"]
ltspice = "sim_plugin_ltspice:plugin_info"

[project.urls]
Homepage = "https://github.com/svd-ai-lab/sim-plugin-ltspice"
Issues = "https://github.com/svd-ai-lab/sim-plugin-ltspice/issues"

[tool.hatch.metadata]
# Required because `sim-runtime` is pinned to a git+https URL — sim-cli is
# distributed via GitHub, not PyPI. See sim-proj memory: plugin distribution
# is GitHub-only.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sim_plugin_ltspice"]
